--- a/composer.json
+++ b/composer.json
@@ -14,22 +14,23 @@
         "ext-parallel": "*",
         "react/event-loop": "^1.1",
         "react/promise": "^2.7",
+        "reactivex/rxphp": "^2.0",
         "wyrihaximus/constants": "^1.4.3"
     },
     "require-dev": {
         "wyrihaximus/async-test-utilities": "^2.0",
         "wyrihaximus/ticking-promise": "^1.6"
     },
-    "extra": {
-        "unused": [
-            "ext-parallel"
-        ]
-    },
     "config": {
         "platform": {
             "php": "7.4"
         },
         "sort-packages": true
+    },
+    "extra": {
+        "unused": [
+            "ext-parallel"
+        ]
     },
     "autoload": {
         "psr-4": {
