--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^7.4",
         "ext-parallel": "*",
+        "react-parallel/event-loop": "dev-master",
         "react/event-loop": "^1.1",
         "react/promise": "^2.7",
         "reactivex/rxphp": "^2.0",
