--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "react-parallel/event-loop": "dev-master",
         "react/event-loop": "^1.1",
         "react/promise": "^2.7",
+        "react/stream": "^1.1",
         "reactivex/rxphp": "^2.0",
         "wyrihaximus/constants": "^1.4.3"
     },
