--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "react/promise": "^2.11 || ^3.1",
         "reactivex/rxphp": "^2.0.12",
         "wyrihaximus/constants": "^1.6",
-        "wyrihaximus/react-awaitable-observable": "^1.1"
+        "wyrihaximus/react-awaitable-observable": "^1.1",
+        "wyrihaximus/react-event-loop-rx-scheduler-hook-up": "^0.1.1"
     },
     "require-dev": {
         "wyrihaximus/async-test-utilities": "^7.2",
